WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255758
AX: Play Animation and Pause Animation actions don't appear for animations with a link parent element
https://bugs.webkit.org/show_bug.cgi?id=255758
Summary
AX: Play Animation and Pause Animation actions don't appear for animations wi...
Tyler Wilcock
Reported
2023-04-20 18:56:21 PDT
Example demonstrating this: <a href="#foo"> <img src="animated-red-green-blue-repeat-infinite.gif" width="223" height="223" alt="Alt text"> </a>
Attachments
Patch
(38.18 KB, patch)
2023-04-20 19:21 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(38.30 KB, patch)
2023-04-20 20:32 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(38.15 KB, patch)
2023-04-20 20:41 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(37.99 KB, patch)
2023-04-21 16:12 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-20 18:56:50 PDT
<
rdar://problem/108350118
>
Tyler Wilcock
Comment 2
2023-04-20 19:21:43 PDT
Created
attachment 466022
[details]
Patch
Tyler Wilcock
Comment 3
2023-04-20 20:32:21 PDT
Created
attachment 466025
[details]
Patch
Tyler Wilcock
Comment 4
2023-04-20 20:41:59 PDT
Created
attachment 466026
[details]
Patch
chris fleizach
Comment 5
2023-04-21 15:19:32 PDT
Comment on
attachment 466026
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=466026&action=review
> Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:545 > + [actions addObject:[_WKElementAction _elementActionWithType:_WKElementActionPauseAnimation info:elementInfo assistant:self]];
can we write these 4 lines as [actions addObject:[_WKElementAction _elementActionWithType:elementInfo.isAnimating ? _WKElementActionPauseAnimation : _WKElementActionPlayAnimation info:elementInfo assistant:self]];
> Tools/TestWebKitAPI/Tests/ios/ActionSheetTests.mm:379 > +#if ENABLE(ACCESSIBILITY_ANIMATION_CONTROL)
does this function need to be guarded by animation control? seems generic
Tyler Wilcock
Comment 6
2023-04-21 16:12:13 PDT
Created
attachment 466037
[details]
Patch
Tyler Wilcock
Comment 7
2023-04-21 16:18:47 PDT
(In reply to chris fleizach from
comment #5
)
> Comment on
attachment 466026
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=466026&action=review
> > > Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:545 > > + [actions addObject:[_WKElementAction _elementActionWithType:_WKElementActionPauseAnimation info:elementInfo assistant:self]]; > > can we write these 4 lines as > > [actions addObject:[_WKElementAction > _elementActionWithType:elementInfo.isAnimating ? > _WKElementActionPauseAnimation : _WKElementActionPlayAnimation > info:elementInfo assistant:self]];
Yeah, that's nicer, thanks. Fixed in latest patch.
> > Tools/TestWebKitAPI/Tests/ios/ActionSheetTests.mm:379 > > +#if ENABLE(ACCESSIBILITY_ANIMATION_CONTROL) > > does this function need to be guarded by animation control? seems generic
Since it's only used with ENABLE(ACCESSIBILITY_ANIMATION_CONTROL), I believe un-guarding it would cause an unused static function warning for other platforms.
EWS
Comment 8
2023-04-24 11:37:50 PDT
Committed
263323@main
(9a8207739bc9): <
https://commits.webkit.org/263323@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466037
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug