Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivateForTesting.h
@@ -84,6 +84,7 @@ struct WKAppPrivacyReportTestingData {
 - (void)_didShowContextMenu;
 - (void)_didDismissContextMenu;
 
+- (BOOL)_allowAnimationControlsForTesting;
 - (BOOL)_shouldBypassGeolocationPromptForTesting;
 
 - (void)_didPresentContactPicker;
